--- a/client/style/style.css
+++ b/client/style/style.css
@@ -12,3 +12,19 @@
   display: flex;
   align-items: center;
 }
+
+.nav {
+  background-color: green; 
+  height: 60px;  
+}
+
+.nav-item {
+  color: white;
+  padding-left: 50px;
+  padding-top: 20px;
+}
+
+.image {
+  padding: 30px;
+  align-content: center;
+}
