--- a/client/style/style.css
+++ b/client/style/style.css
@@ -14,17 +14,40 @@
 }
 
 .nav {
-  background-color: green; 
+  background-color: rgb(66, 163, 66); 
   height: 60px;  
 }
 
 .nav-item {
   color: white;
-  padding-left: 50px;
-  padding-top: 20px;
+  padding-left: 30px;
+  padding-top: 12px;
 }
 
 .image {
   padding: 30px;
   align-content: center;
+}
+
+p {
+  font-size: 18px;
+  padding: 0;
+  margin: 0;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-gap: 10px;
+  /* background-color: #fff; */
+  /* color: #444; */
+}
+
+.box {
+  /* background-color: #444; */
+  /* color: #fff; */
+  /* border-radius: 5px; */
+  padding: 20px;
+  text-align: left;
+  /* font-size: 150%; */
 }
